--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,11 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-*{
-    color: white;
-    font-family: Inter;
-    font-optical-sizing: auto;
+* {
+  color: white;
+  font-family: Inter;
+  font-optical-sizing: auto;
 }
 
-h2{
-    font-size: 24px;
+h2 {
+  font-size: 24px;
 }
